[package]
name = "koko"
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
version = "0.1.0"
description = "now here's the cocoa"

readme = "./README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/hakusoda/koko"
repository = "https://github.com/hakusoda/koko"

edition = "2021"
rust-version = "1.73"

[dependencies]
log = "0.4.20"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.32", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
actix-web = "4.4.1"
postgrest = "1.6.0"
once_cell = "1.19.0"
serde_repr = "0.1.18"
tokio-util = "0.7.10"
serde_json = "1.0.111"
derive_more = "0.99.17"
simple_logger = "4.3.3"

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "unwind"
opt-level = "s"
codegen-units = 1
debug-assertions = false